# ChallengeCaravan2023_backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main_opengift.yml
api/: .env.sample  db.py  main.py  migirate_db.py  migrate_db.py
api/cruds/: event.py  user.py
api/models/: event.py  user.py
api/routers/: event.py  user.py
api/schemas/: event.py  user.py
